@@ -3,61 +3,63 @@ package ru.yandex.practicum.collector.mapper;
 import ru.yandex.practicum.collector.model.hub.*;
 import ru.yandex.practicum.kafka.telemetry.event.*;
 
-import java.util.stream.Collectors;
-
 public class HubEventAvroMapper {
 
     public static HubEventAvro map(HubEvent event) {
-        Object payload;
+
+        return HubEventAvro.newBuilder()
+                .setHubId(event.getHubId())
+                .setTimestamp(event.getTimestamp())
+                .setPayload(mapPayload(event))
+                .build();
+    }
+
+    private static Object mapPayload(HubEvent event) {
 
         if (event instanceof DeviceAddedEvent e) {
-            payload = DeviceAddedEventAvro.newBuilder()
+            return DeviceAddedEventAvro.newBuilder()
                     .setId(e.getId())
-                    .setType(DeviceTypeAvro.valueOf(e.getDeviceType()))
+                    .setType(DeviceTypeAvro.valueOf(e.getDeviceType().name()))
                     .build();
+        }
 
-        } else if (event instanceof DeviceRemovedEvent e) {
-            payload = DeviceRemovedEventAvro.newBuilder()
+        if (event instanceof DeviceRemovedEvent e) {
+            return DeviceRemovedEventAvro.newBuilder()
                     .setId(e.getId())
                     .build();
+        }
 
-        } else if (event instanceof ScenarioAddedEvent e) {
-            payload = ScenarioAddedEventAvro.newBuilder()
-                    .setName(e.getName())
+        if (event instanceof ScenarioAddedEvent e) {
+            return ScenarioAddedEventAvro.newBuilder()
+                    .setId(e.getScenarioId())
                     .setConditions(
                             e.getConditions().stream()
                                     .map(c -> ScenarioConditionAvro.newBuilder()
                                             .setSensorId(c.getSensorId())
-                                            .setType(ConditionTypeAvro.valueOf(c.getType()))
-                                            .setOperation(ConditionOperationAvro.valueOf(c.getOperation()))
+                                            .setType(ConditionTypeAvro.valueOf(c.getType().name()))
+                                            .setOperation(ConditionOperationAvro.valueOf(c.getOperation().name()))
                                             .setValue(c.getValue())
-                                            .build())
-                                    .collect(Collectors.toList())
+                                            .build()
+                                    ).toList()
                     )
                     .setActions(
                             e.getActions().stream()
                                     .map(a -> DeviceActionAvro.newBuilder()
                                             .setSensorId(a.getSensorId())
-                                            .setType(ActionTypeAvro.valueOf(a.getType()))
+                                            .setType(ActionTypeAvro.valueOf(a.getType().name()))
                                             .setValue(a.getValue())
-                                            .build())
-                                    .collect(Collectors.toList())
+                                            .build()
+                                    ).toList()
                     )
                     .build();
-
-        } else if (event instanceof ScenarioRemovedEvent e) {
-            payload = ScenarioRemovedEventAvro.newBuilder()
-                    .setName(e.getName())
-                    .build();
-
-        } else {
-            throw new IllegalArgumentException("Unsupported hub event: " + event.getClass());
         }
 
-        return HubEventAvro.newBuilder()
-                .setHubId(event.getHubId())
-                .setTimestamp(event.getTimestamp()) // ✅ Instant
-                .setPayload(payload)
-                .build();
+        if (event instanceof ScenarioRemovedEvent e) {
+            return ScenarioRemovedEventAvro.newBuilder()
+                    .setId(e.getScenarioId())
+                    .build();
+        }
+
+        throw new IllegalArgumentException("Unsupported hub event: " + event.getClass());
     }
 }
